# amazon-freertos

.github/: CODEOWNERS
cmake/vendors/microchip/curiosity_pic32mzef/: CMakeLists.txt
demos/demo_runner/: iot_demo_afr.c
demos/include/: aws_clientcredential.h
doc/config/: layout_logging.xml  layout_mqtt.xml  layout_taskpool.xml  logging  mqtt  taskpool
doc/config/html/: header.html
doc/lib/: logging.txt  mqtt.txt  taskpool.txt
libraries/abstractions/pkcs11/test/: iot_test_pkcs11.c
projects/microchip/curiosity_pic32mzef/mplab/aws_tests/nbproject/: configurations.xml  project.xml
projects/microchip/curiosity_pic32mzef/mplab/aws_tests/nbproject/private/: configurations.xml  private.xml
projects/microchip/curiosity_pic32mzef/mplab/bootloader_tests/nbproject/: configurations.xml
tests/common/: iot_test_freertos.c
tests/include/: aws_clientcredential.h  aws_clientcredential_keys.h
vendors/mediatek/boards/mt7697hx-dev-kit/aws_demos/uvision/: aws_demos.uvguix.ejacobus  aws_demos.uvoptx  aws_demos.uvprojx
vendors/microchip/boards/curiosity_pic32mzef/aws_tests/application_code/: main.c
vendors/microchip/boards/curiosity_pic32mzef/aws_tests/application_code/microchip_code/: system_config.h  system_init.c  system_interrupt.c  system_interrupt_a.S
vendors/microchip/boards/curiosity_pic32mzef/aws_tests/config_files/: FreeRTOSConfig.h  aws_test_runner_config.h  iot_test_pkcs11_config.h
vendors/microchip/boards/curiosity_pic32mzef/bootloader/common/microchip_code/: system_init.c
vendors/microchip/harmony/v2.05/framework/driver/i2c/src/dynamic/: drv_i2c.c
vendors/microchip/harmony/v2.05/framework/system/command/src/: sys_command.c
vendors/microchip/harmony/v2.05/framework/system/ports/src/: sys_ports_static.c
vendors/microchip/secure_elements/lib/hal/: hal_freertos.c  hal_pic32mz2048efm_i2c.c
vendors/pc/boards/windows/aws_cutdown/common/application_code/: main.c
vendors/pc/boards/windows/aws_cutdown/common/config_files/: FreeRTOSConfig.h  iot_config.h
vendors/pc/boards/windows/aws_cutdown/visual_studio/: aws_demos.vcxproj  aws_demos.vcxproj.filters
vendors/pc/boards/windows/aws_demos/common/config_files/: FreeRTOSConfig.h  FreeRTOSIPConfig.h
vendors/pc/boards/windows/aws_demos/visual_studio/: aws_demos.vcxproj
